[project]
name = "csc458-tester"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "dpkt>=1.9.8",
    "ltprotocol",
    "termcolor>=2.4.0",
    "twisted>=24.11.0",
]

[dependency-groups]
dev = [
    "ruff>=0.11.12",
]

[tool.uv.sources]
ltprotocol = { git = "https://github.com/davidlin2k/ltprotocol" }
